 - s6-log now has a default line limit of 8 kB.
 - In the accessrules library, checking against uidgid now checks the
uid/self key if the client and the server have the same uid, and the
gid/self key if the client and the server have the same gid. That means
s6-ipcserver-access can now be configured to allow/deny/specialcase
connections where the client's credentials are the same as the server's.


In 2.7.2.2
----------

 - Bugfixes.


In 2.7.2.1
----------

 - Bugfixes.


In 2.7.2.0
----------

 - s6-ipcserver-socketbinder now takes a -B option to make the socket blocking.
 - s6-svscan now takes a "-d notif" option to notify readiness. This is
*shallow readiness*, i.e. readiness will be reported when s6-svscan is ready
to receive s6-svscanctl commands; it does *not* mean all the services started
at s6-svscan launch will be ready.
 - New optional file in a service directory: down-signal. It allows you to
customize the signal sent by s6-svc -d (and now s6-svc -r too).
 - New s6-svc option: -r. Sends the signal defined in the down-signal file
(still SIGTERM by default).
 - Adaptation to skalibs-2.7.0.0.
 - Optional nsss support added.


In 2.7.1.1
----------

 - Bugfixes.


In 2.7.1.0
----------

 - Bugfixes.
 - s6-svwait et al. now exit 102 instead of hanging if s6-supervise dies.
 - New commands: s6-svdt, s6-svdt-clear, s6-permafailon
 - s6-tai64nlocal can now print GMT times with the -g option.


In 2.7.0.0
----------

 - Bugfixes.
 - s6-ftrigrd and s6lockd internally use the textclient API/ABI
instead of skaclient. This is cleaner, faster code.
 - New "-a perms" option to s6-ipcserver and s6-ipcserver-socketbinder.


In 2.6.2.0
----------

 - Bugfixes.
 - New functions: s6_fdholder_start() and s6_fdholder_end().


In 2.6.1.1
----------

 - Bugfixes.


In 2.6.1.0
----------

 - Bugfixes.
 - Addition of the s6_svc_lock_take() and s6_svc_lock_release()
functions, to fix a race condition in s6-rc.
 - New program: s6-notifyoncheck, to implement polling for